tests/ui/error-codes/E0771.stderr
error[E0771]: use of non-static lifetime `'a` in const generic
  --> $DIR/E0771.rs:4:41
   |
LL | fn function_with_str<'a, const STRING: &'a str>() {}
   |                                         ^^
   |
   = note: for more information, see issue #74052 <https://github.com/rust-lang/rust/issues/74052>

warning: the feature `adt_const_params` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/E0771.rs:1:12
   |
LL | #![feature(adt_const_params)]
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #95174 <https://github.com/rust-lang/rust/issues/95174> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0771`.
